k8s/GCP/05-frontend.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: wallet
    labels:
        app: frontend
spec:
    ports:
        - port: 80
          targetPort: 80
          name: http
    selector:
        app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: wallet
spec:
    selector:
        matchLabels:
            app: frontend
    replicas: 2
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: ahm282/frontend:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                  resources:
                      requests:
                          memory: "64Mi"
                          cpu: "50m"
                      limits:
                          memory: "128Mi"
                          cpu: "100m"
