k8s/GCP/06-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
    name: api-gateway
    namespace: wallet
    labels:
        app: api-gateway
spec:
    ports:
        - port: 8080
          targetPort: 8080
          name: http
    selector:
        app: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-gateway
    namespace: wallet
spec:
    selector:
        matchLabels:
            app: api-gateway
    replicas: 1
    template:
        metadata:
            labels:
                app: api-gateway
        spec:
            containers:
                - name: api-gateway
                  image: ahm282/api-gateway:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "200m"
                      limits:
                          memory: "512Mi"
                          cpu: "300m"
