k8s/GCP/07-user-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: user-service
    namespace: wallet
    labels:
        app: user-service
spec:
    ports:
        - port: 8081
          targetPort: 8081
          name: http
    selector:
        app: user-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-service
    namespace: wallet
spec:
    selector:
        matchLabels:
            app: user-service
    replicas: 1
    template:
        metadata:
            labels:
                app: user-service
        spec:
            containers:
                - name: user-service
                  image: ahm282/user-service:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8081
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "256Mi"
                          cpu: "200m"
