k8s/GCP/08-finance-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: finance-service
    namespace: wallet
    labels:
        app: finance-service
spec:
    ports:
        - port: 8082
          targetPort: 8082
          name: http
    selector:
        app: finance-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: finance-service
    namespace: wallet
spec:
    selector:
        matchLabels:
            app: finance-service
    replicas: 1
    template:
        metadata:
            labels:
                app: finance-service
        spec:
            containers:
                - name: finance-service
                  image: ahm282/finance-service:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8082
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "256Mi"
                          cpu: "200m"
