k8s/GCP/09-insights-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: insights-service
    namespace: wallet
    labels:
        app: insights-service
spec:
    ports:
        - port: 8083
          targetPort: 8083
          name: http
    selector:
        app: insights-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: insights-service
    namespace: wallet
spec:
    selector:
        matchLabels:
            app: insights-service
    replicas: 1
    template:
        metadata:
            labels:
                app: insights-service
        spec:
            containers:
                - name: insights-service
                  image: ahm282/insights-service:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8083
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "256Mi"
                          cpu: "200m"
