k8s/GCP/10-user-db.yaml
apiVersion: v1
kind: Service
metadata:
    name: user-db-svc
    namespace: wallet
    labels:
        app: user-db
spec:
    ports:
        - port: 3306
          targetPort: 3306
          name: mysql
    selector:
        app: user-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: user-db
    namespace: wallet
spec:
    serviceName: user-db-svc
    replicas: 1
    selector:
        matchLabels:
            app: user-db
    template:
        metadata:
            labels:
                app: user-db
        spec:
            containers:
                - name: mariadb
                  image: mariadb:latest
                  ports:
                      - containerPort: 3306
                        name: mysql
                  volumeMounts:
                      - name: user-db-data
                        mountPath: /var/lib/mysql
                      - name: init-scripts
                        mountPath: /docker-entrypoint-initdb.d
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "256Mi"
                          cpu: "200m"
                  args: ["--bind-address=0.0.0.0", "--max_connections=20"]
            volumes:
                - name: user-db-data
                  persistentVolumeClaim:
                      claimName: user-db-pvc
                - name: init-scripts
                  configMap:
                      name: mariadb-init
