k8s/GCP/11-finance-db.yaml
apiVersion: v1
kind: Service
metadata:
    name: finance-db-svc
    namespace: wallet
    labels:
        app: finance-db
spec:
    ports:
        - port: 27017
          targetPort: 27017
          name: mongodb
    selector:
        app: finance-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: finance-db
    namespace: wallet
spec:
    selector:
        matchLabels:
            app: finance-db
    replicas: 1
    template:
        metadata:
            labels:
                app: finance-db
        spec:
            containers:
                - name: mongodb
                  image: mongo:latest
                  ports:
                      - containerPort: 27017
                  volumeMounts:
                      - name: finance-db-data
                        mountPath: /data/db
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "50m"
                      limits:
                          memory: "256Mi"
                          cpu: "200m"
            volumes:
                - name: finance-db-data
                  persistentVolumeClaim:
                      claimName: finance-db-pvc
