k8s/GCP/13-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: wallet-ingress
    namespace: wallet
    annotations:
        kubernetes.io/ingress.class: "gce"
spec:
    rules:
        - host: walletapp.top
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 80
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: api-gateway
                            port:
                                number: 8080
